{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 40,
  "lineage": "a845156f-5a58-dca0-4d44-bdf35c2d99cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instances",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac80df6eff0e70b5",
            "arn": "arn:aws:ec2:us-east-1:687527696255:instance/i-0ea1ea7b237a88d25",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea1ea7b237a88d25",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099db59e595cf0c73",
            "private_dns": "ip-192-168-1-144.ec2.internal",
            "private_ip": "192.168.1.144",
            "public_ip": "3.82.199.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a22ce207ab67b463",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097680943c62a533c",
            "tags": {
              "Env": "Prod",
              "Name": "PublicServer-1",
              "Owner": "Sampath"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dcb39b9011befcc4"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac80df6eff0e70b5",
            "arn": "arn:aws:ec2:us-east-1:687527696255:instance/i-07e28d03cf2a769e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e28d03cf2a769e3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03a8620c80fbd5a25",
            "private_dns": "ip-192-168-2-119.ec2.internal",
            "private_ip": "192.168.2.119",
            "public_ip": "54.175.97.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dcb3f3bbe4c0614a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04210dbcb73e501e5",
            "tags": {
              "Env": "Prod",
              "Name": "PublicServer-2",
              "Owner": "Sampath"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dcb39b9011befcc4"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687527696255:internet-gateway/igw-048ac038e83e70dd1",
            "id": "igw-048ac038e83e70dd1",
            "owner_id": "687527696255",
            "tags": {
              "Name": "Tf-TCS-igw"
            },
            "vpc_id": "vpc-0e7a2a6acf35eae2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e4ae97ca462468e5",
            "owner_id": "687527696255",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-048ac038e83e70dd1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tf-publictb-dev"
            },
            "vpc_id": "vpc-0e7a2a6acf35eae2e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075a6d6417a21857c",
            "route_table_id": "rtb-0e4ae97ca462468e5",
            "subnet_id": "subnet-097680943c62a533c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform-public",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0595c432187d68845",
            "route_table_id": "rtb-0e4ae97ca462468e5",
            "subnet_id": "subnet-04210dbcb73e501e5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform-public",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c35c00b988584e61",
            "route_table_id": "rtb-0e4ae97ca462468e5",
            "subnet_id": "subnet-0d586f972e4709e81"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform-public",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687527696255:security-group/sg-0dcb39b9011befcc4",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcb39b9011befcc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": null,
            "owner_id": "687527696255",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e7a2a6acf35eae2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687527696255:subnet/subnet-0b03aaa0665594450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.10.0/24",
            "id": "subnet-0b03aaa0665594450",
            "map_public_ip_on_launch": false,
            "owner_id": "687527696255",
            "tags": {
              "Name": "tcspre-1"
            },
            "vpc_id": "vpc-0e7a2a6acf35eae2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687527696255:subnet/subnet-00506f204ab1dd1c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.20.0/24",
            "id": "subnet-00506f204ab1dd1c4",
            "map_public_ip_on_launch": false,
            "owner_id": "687527696255",
            "tags": {
              "Name": "tcspre-2"
            },
            "vpc_id": "vpc-0e7a2a6acf35eae2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687527696255:subnet/subnet-0160e77c03781c7cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.30.0/24",
            "id": "subnet-0160e77c03781c7cd",
            "map_public_ip_on_launch": false,
            "owner_id": "687527696255",
            "tags": {
              "Name": "tcspre-3"
            },
            "vpc_id": "vpc-0e7a2a6acf35eae2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687527696255:subnet/subnet-097680943c62a533c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-097680943c62a533c",
            "map_public_ip_on_launch": false,
            "owner_id": "687527696255",
            "tags": {
              "Name": "tcspub-1"
            },
            "vpc_id": "vpc-0e7a2a6acf35eae2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687527696255:subnet/subnet-04210dbcb73e501e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-04210dbcb73e501e5",
            "map_public_ip_on_launch": false,
            "owner_id": "687527696255",
            "tags": {
              "Name": "tcspub-2"
            },
            "vpc_id": "vpc-0e7a2a6acf35eae2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687527696255:subnet/subnet-0d586f972e4709e81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0d586f972e4709e81",
            "map_public_ip_on_launch": false,
            "owner_id": "687527696255",
            "tags": {
              "Name": "tcspub-3"
            },
            "vpc_id": "vpc-0e7a2a6acf35eae2e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:687527696255:vpc/vpc-0e7a2a6acf35eae2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05afa5bfc189b4ecd",
            "default_route_table_id": "rtb-03aa2d3611856e0a6",
            "default_security_group_id": "sg-0d99f3c03565a467c",
            "dhcp_options_id": "dopt-2a8c0050",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e7a2a6acf35eae2e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03aa2d3611856e0a6",
            "owner_id": "687527696255",
            "tags": {
              "Name": "TCSVPC-1",
              "envir": "development",
              "owner": "sampath"
            }
          }
        }
      ]
    }
  ]
}